--- a/vuejs-tutorial/package.json
+++ b/vuejs-tutorial/package.json
@@ -26,6 +26,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "font-awesome": "^4.7.0",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
